# Lodestar

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
lodestar/: __init__.py  bot.py  config.py
lodestar/analysis/: screener.py  sentiment.py  technical.py
lodestar/brokers/: __init__.py  base.py  paper.py  robinhood.py
lodestar/cli/: main.py
lodestar/dashboard/: app.py
lodestar/dashboard/static/: style.css
lodestar/dashboard/templates/: index.html
lodestar/models/: trade.py
lodestar/portfolio/: manager.py
lodestar/strategies/: __init__.py  base.py  mean_reversion.py  momentum.py  sentiment_strategy.py
lodestar/utils/: logging.py
tests/: test_dashboard.py  test_models.py  test_paper_broker.py  test_portfolio_manager.py  test_strategies.py  test_technical.py
